--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
 							<li><a href="About.html">About Me</a></li>
-							<li><a href="Launch Module.html">Launch Module</a></li>
-							<li><a href="Module 2.html">Secure Software Development</a></li>
-							<li><a href="Module 3.html">Object-Oriented Information Systems</a></li>
-							<li><a href="Module 4.html">Network and Information Security Management</a></li>
-							<li><a href="Module 5.html">Software Engineering PM</a></li>
+							<li><a href="Launch Module.html">The Data Professional</a></li>
+							<li><a href="Module 2.html">Numerical Analysis</a></li>
+							<li><a href="Module 3.html">Deciphering Big Data</a></li>
+							<li><a href="Module 4.html">Visualising Data</a></li>
+							<li><a href="Module 5.html">Machine Learning PM</a></li>
 							<li><a href="Module 6.html">Research Methods and Professional Practice</a></li>
 							<li><a href="Project.html">Project</a></li>
 							<ul>
@@ -44,7 +44,7 @@
 					<section id="banner" class="major">
 						<div class="inner">
 							<header class="major">
-								<h1>MSc Computer Science E-Portfolio</h1>
+								<h1>MSc Data Science E-Portfolio</h1>
 							</header>
 							<div class="content">
 								<p>My e-portfolio based on the work carried out on the MSc Computer Science programme.</p>
