--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 									<img src="images/pic01.jpg" alt="" />
 								</span>
 								<header class="major">
-									<h3><a href="Launch Module.html" class="link">Launch module</a></h3>
+									<h3><a href="Launch Module.html" class="link">The Data Professional</a></h3>
 									<p>Introductory module</p>
 								</header>
 							</article>
