--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 									<img src="images/pic02.jpg" alt="" />
 								</span>
 								<header class="major">
-									<h3><a href="Module 2.html" class="link">Secure Software Development</a></h3>
+									<h3><a href="Module 2.html" class="link">Numerical Analysis</a></h3>
 									<p>More on the foundations of computer science and software development</p>
 								</header>
 							</article>
@@ -94,7 +94,7 @@
 									<img src="images/pic03.jpg" alt="" />
 								</span>
 								<header class="major">
-									<h3><a href="Module 3.html" class="link">Object-Oriented Information Systems</a></h3>
+									<h3><a href="Module 3.html" class="link">Deciphering Big Data</a></h3>
 								</header>
 							</article>
 							<article>
@@ -102,7 +102,7 @@
 									<img src="images/pic04.jpg" alt="" />
 								</span>
 								<header class="major">
-									<h3><a href="Module 4.html" class="link">Network and Information Security Management</a></h3>
+									<h3><a href="Module 4.html" class="link">Visualising Data</a></h3>
 								</header>
 							</article>
 							<article>
@@ -110,7 +110,7 @@
 									<img src="images/pic05.jpg" alt="" />
 								</span>
 								<header class="major">
-									<h3><a href="Module 5.html" class="link">Software Engineering PM</a></h3>
+									<h3><a href="Module 5.html" class="link">Machine Learning</a></h3>
 								</header>
 							</article>
 							<article>
