--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 								</span>
 								<header class="major">
 									<h3><a href="Launch Module.html" class="link">The Data Professional</a></h3>
-									<p>Introductory module</p>
+									<p>Exploration & Investigation of the Critical Theoretical Concepts in Data Science </p>
 								</header>
 							</article>
 							<article>
