--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 								<header class="major">
 									<h2>About Me</h2>
 								</header>
-								<p> Hello.My name is Tasweem Beelunkhan. Welcome to my E-Portfolio for the MSc Data Science at the University of Essex. I am a curious and driven Data Analyst with experience working with SQL and Power BI. I am fascinated about science and solving complex problems. .</p>
+								<p> Hello.My name is Tasweem Beelunkhan. Welcome to my E-Portfolio for the MSc Data Science at the University of Essex. I am a curious and driven Data Analyst with experience working with SQL and Power BI. I am fascinated about science and solving complex problems.</p>
 								<ul class="actions">
 								<li><a href="About.html" class="button">Learn more</a></li>
 								</ul>
