--- a/About.html
+++ b/About.html
@@ -53,8 +53,8 @@ A new Landing page has to be created for each option
 								<h1>About Me</h1>
 							</header>
 							<div class="content">
-								<p>About me<br />
-								(Should be good)</p>
+								<p> Mauritian. Bilingual. Passionate about Data & Science.<br />
+							
 							</div>
 						</div>
 					</section>
@@ -68,7 +68,7 @@ A new Landing page has to be created for each option
 									<header class="major">
 										<h2>Brief Intro</h2>
 									</header>
-									<p>Test, test, test</p>
+									<p>Hello.My name is Tasweem Beelunkhan. Welcome to my E-Portfolio for the MSc Data Science at the University of Essex. I am a curious and driven Data Analyst with experience working with SQL and Power BI. I am fascinated about science and solving complex problems.</p>
 								</div>
 							</section>
 
