--- a/About.html
+++ b/About.html
@@ -76,7 +76,7 @@ A new Landing page has to be created for each option
 							<section id="two" class="spotlights">
 								<section>
 									<a href="generic.html" class="image">
-										<img src="images/pic12.jpg" alt="" data-position="center center" />
+										<img src="images/briefcase.jpg" alt="" data-position="center center" />
 									</a>
 									<div class="content">
 										<div class="inner">
