--- a/Module 4.html
+++ b/Module 4.html
@@ -50,7 +50,7 @@ A new Landing page has to be created for each option
 								<img src="images/pic07.jpg" alt="" />
 							</span>
 							<header class="major">
-								<h1>Network and Information Security Management</h1>
+								<h1>Deciphering Big Data</h1>
 							</header>
 							<div class="content">
 								<p>Network and Information Security Management</p>
