--- a/Module 4.html
+++ b/Module 4.html
@@ -53,7 +53,8 @@ A new Landing page has to be created for each option
 								<h1>Deciphering Big Data</h1>
 							</header>
 							<div class="content">
-								<p>Network and Information Security Management</p>
+								<p>
+Big Data refers to large data sets analyzed to reveal patterns and trends. It involves data storage, processing, cleaning, analysis, visualization, and security. Understanding Big Data requires knowledge of statistics, data analysis, programming, and various big data tools. This knowledge is applied in data-driven decision making within business contexts.</p>
 							</div>
 						</div>
 					</section>
