--- a/Module 4.html
+++ b/Module 4.html
@@ -72,9 +72,10 @@ A new Landing page has to be created for each option
 									</header>
 									<p>I will learn:</p>
 									<ul>
-										<li>Dolor etiam magna etiam.</li>
-										<li>Sagittis lorem eleifend.</li>
-										<li>Felis dolore viverra.</li>
+										<li>Identify and manage challenges, security issues and risks, limitations and opportunities in data wrangling.</li>
+										<li>Critically analyse data wrangling problems and determine appropriate methodologies, tools and techniques (involving preparing, cleaning, exploring, creating, optimising and evaluating big data) to solve them</li>
+										<li>Design, develop and evaluate solutions for processing datasets and solving complex problems in various environments using relevant programming paradigms.</li>
+									        <li>Systematically develop and implement the skills required to be effective member of a development team in a virtual professional environment, adopting real-life perspectives on team roles and organisation.</li>
 									</ul>
 								</div>
 							</section>
