--- a/Module 4.html
+++ b/Module 4.html
@@ -80,10 +80,10 @@ A new Landing page has to be created for each option
 								</div>
 							</section>
 
-						<!-- Two -->
+						<!-- ONE -->
 							<section id="two" class="spotlights">
 								<section>
-									<a href="generic.html" class="image">
+									<a href="generic_DBD_1.html" class="image">
 										<img src="images/pic08.jpg" alt="" data-position="center center" />
 									</a>
 									<div class="content">
@@ -99,7 +99,7 @@ A new Landing page has to be created for each option
 									</div>
 								</section>
 								<section>
-									<a href="generic.html" class="image">
+									<a href="generic_DBD_1.html" class="image">
 										<img src="images/pic09.jpg" alt="" data-position="top center" />
 									</a>
 									<div class="content">
@@ -132,6 +132,57 @@ A new Landing page has to be created for each option
 								</section>
 							</section>
 
+						<!-- Two -->
+							<section id="two" class="spotlights">
+								<section>
+									<a href="generic_DBD_1.html" class="image">
+										<img src="images/pic08.jpg" alt="" data-position="center center" />
+									</a>
+									<div class="content">
+										<div class="inner">
+											<header class="major">
+												<h3>Artefacts</h3>
+											</header>
+											<p>These are the projects carried out to meet those learning outcomes, which are described in the link below.</p>
+											<ul class="actions">
+												<li><a href="generic.html" class="button">Learn more</a></li>
+											</ul>
+										</div>
+									</div>
+								</section>
+								<section>
+									<a href="generic_DBD_1.html" class="image">
+										<img src="images/pic09.jpg" alt="" data-position="top center" />
+									</a>
+									<div class="content">
+										<div class="inner">
+											<header class="major">
+												<h3>Reflections</h3>
+											</header>
+											<p>What exactly have I learnt and how?</p>
+											<ul class="actions">
+												<li><a href="generic.html" class="button">More Information here</a></li>
+											</ul>
+										</div>
+									</div>
+								</section>
+								<section>
+									<a href="generic.html" class="image">
+										<img src="images/pic10.jpg" alt="" data-position="25% 25%" />
+									</a>
+									<div class="content">
+										<div class="inner">
+											<header class="major">
+												<h3>Meeting Notes</h3>
+											</header>
+											<p>Notes from various meetings, as well as feedback from team members and tutors.</p>
+											<ul class="actions">
+												<li><a href="generic.html" class="button">For details, see here</a></li>
+											</ul>
+										</div>
+									</div>
+								</section>
+							</section>
 						<!-- Three -->
 							<section id="three">
 								<div class="inner">
