--- a/Module 4.html
+++ b/Module 4.html
@@ -89,7 +89,7 @@ A new Landing page has to be created for each option
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Artefacts</h3>
+												<h3>Collaborative Discussion Forum Summaries</h3>
 											</header>
 											<p>These are the projects carried out to meet those learning outcomes, which are described in the link below.</p>
 											<ul class="actions">
