--- a/Module 4.html
+++ b/Module 4.html
@@ -92,9 +92,15 @@ A new Landing page has to be created for each option
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Artefactss</h3>
+												<h3>Collaborative Discussion Forum Summaries</h3>
 											</header>
-											<p>These are the projects carried out to meet those learning outcomes, which are described in the link below.</p>
+											<p> The module comprises of 2 Collaborative Discussions:
+                                                                                            Collaborative Discussion 1 - The Data Collection Process
+                                                                                            Collaborative Discussion 2 - Comparing Compliance Laws
+                                                                                            Both have 2 main learning outcomes:
+                                                                                            •	Critically analyse data wrangling problems and determine appropriate methodologies, tools, and techniques (involving preparing, cleaning, exploring, creating, optimising, and evaluating big data) to solve them.
+                                                                                            •	Identify and manage challenges, security issues and risks, limitations, and opportunities in data wrangling.
+                                                                                        </p>
 											<ul class="actions">
 												<li><a href="generic.html" class="button">Learn more</a></li>
 											</ul>
