--- a/Module 4.html
+++ b/Module 4.html
@@ -94,13 +94,19 @@ A new Landing page has to be created for each option
 											<header class="major">
 												<h3>Collaborative Discussion Forum Summaries</h3>
 											</header>
-											<p> The module comprises of 2 Collaborative Discussions:
-                                                                                            Collaborative Discussion 1 - The Data Collection Process
-                                                                                            Collaborative Discussion 2 - Comparing Compliance Laws
-                                                                                            Both have 2 main learning outcomes:
-                                                                                            •	Critically analyse data wrangling problems and determine appropriate methodologies, tools, and techniques (involving preparing, cleaning, exploring, creating, optimising, and evaluating big data) to solve them.
-                                                                                            •	Identify and manage challenges, security issues and risks, limitations, and opportunities in data wrangling.
-                                                                                        </p>
+											<div>
+                                                                                            <h2>The module comprises of 2 Collaborative Discussions:</h2>
+                                                                                            <ul>
+                                                                                                <li>Collaborative Discussion 1 - The Data Collection Process</li>
+                                                                                                <li>Collaborative Discussion 2 - Comparing Compliance Laws</li>
+                                                                                            </ul>
+                                                                                            <h3>Both have 2 main learning outcomes:</h3>
+                                                                                            <ul>
+                                                                                            <li>Critically analyse data wrangling problems and determine appropriate methodologies, tools, and techniques (involving preparing, cleaning, exploring, creating, optimising, and evaluating big data) to solve them.</li>
+                                                                                            <li>Identify and manage challenges, security issues and risks, limitations, and opportunities in data wrangling.</li>
+                                                                                            </ul>
+                                                                                         </div>
+
 											<ul class="actions">
 												<li><a href="generic.html" class="button">Learn more</a></li>
 											</ul>
