--- a/Module 4.html
+++ b/Module 4.html
@@ -108,7 +108,7 @@ A new Landing page has to be created for each option
                                                                                          </div>
 
 											<ul class="actions">
-												<li><a href="generic.html" class="button">Learn more</a></li>
+												<li><a href="generic_DBD_1.html" class="button">Learn more</a></li>
 											</ul>
 										</div>
 									</div>
