--- a/generic_DBD_1.html
+++ b/generic_DBD_1.html
@@ -8,7 +8,7 @@
 -->
 <html>
 	<head>
-		<title>Jane Doe</title>
+		<title>Tasweem Beelunkhan</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="css/main.css" />
@@ -21,7 +21,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo"><span>Jane Doe</span></a>
+						<a href="index.html" class="logo"><span>Tasweem Beelunkhan</span></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -30,13 +30,13 @@
 				<!-- Menu -->
 					<nav id="menu">
 						<ul class="links">
-							<<li><a href="index.html">Home</a></li>
+							<li><a href="index.html">Home</a></li>
 							<li><a href="About.html">About Me</a></li>
-							<li><a href="Launch Module.html">Launch Module</a></li>
-							<li><a href="Module 2.html">Secure Software Development</a></li>
-							<li><a href="Module 3.html">Object-Oriented Information Systems</a></li>
-							<li><a href="Module 4.html">Network and Information Security Management</a></li>
-							<li><a href="Module 5.html">Software Engineering PM</a></li>
+							<li><a href="Launch Module.html">The Data Professional</a></li>
+							<li><a href="Module 2.html">Numerical Analysis</a></li>
+							<li><a href="Module 3.html">Deciphering Big Data</a></li>
+							<li><a href="Module 4.html">Visualising Data</a></li>
+							<li><a href="Module 5.html">Machine Learning PM</a></li>
 							<li><a href="Module 6.html">Research Methods and Professional Practice</a></li>
 							<li><a href="Project.html">Project</a></li>
 						</ul>
