--- a/generic_DBD_1.html
+++ b/generic_DBD_1.html
@@ -49,7 +49,7 @@
 							<section id="one">
 								<div class="inner">
 									<header class="major">
-										<h1>Generic title</h1>
+										<h1>Collaborative Discussion Forum Summaries</h1>
 									</header>
 									<span class="image main"><img src="images/pic11.jpg" alt="" /></span>
 									<p>Just a place for more information from the various key pages</p>
