--- a/generic_DBD_1.html
+++ b/generic_DBD_1.html
@@ -62,7 +62,16 @@
 									   Díaz, M., Martín, C. and Rubio, B. (2016) ‘State-of-the-art, challenges, and open issues in the integration of internet of things and cloud computing’, Journal of Network and Computer Applications, 67, pp. 99–117. doi:10.1016/j.jnca.2016.01.010. <br />
 									   Gartner (2015). Big Data Hypecycle. Gartner. Available at: https://www.gartner.com/en/products/special-reports [Accessed 16 Jul. 2023].
 									</p>
-
+									<p>The second discussion is on the comparison of the rules of the GDPR - in particular, with relation to the securing of personal data rule, with either similar compliance laws within your country of residence, or with the ICO in the UK.<br />
+									    With the Data Protection Act 2017 (DPA 2017), Mauritius has aligned its domestic laws with stringent international data protection standards, drawing heavily from the EU's General Data Protection Regulation. The DPA 2017 applies to organizations in Mauritius handling personal data or using local equipment for such processes. Despite many similarities, the DPA 2017 and GDPR differ in aspects of data transfer, notably the definition of "adequate" data protection. Businesses operating internationally must understand these nuances to ensure compliance with all relevant laws.<br />
+								            My peers each discussed on the compliance laws that govern their respective country namely the General Data Protection Regulation (GDPR) in UK, the German Federal Data Protection Act (BDSG) in Germany, and the Personal Information Protection and Electronic Documents Act (PIPEDA) in Canada. Although they have different purviews, all regulate the protection of personal data. While BDSG has an emphasis on security and adds particular for public and religious organisations, GDPR is comprehensive and covers all data controllers and processors. Public bodies are not covered by PIPEDA, which instead focuses on commercial data use. Each law responds to its jurisdiction, demonstrating that while harmonisation of data protection laws is possible, local variables and specifics have a big impact on how they are created and applied.<br />
+								            Global compliance is an important aspect of avoiding risk and building expansion agility. Understanding these nuances is critical for organizations operating across multiple jurisdictions, aiding in compliance, and fostering a culture of global data privacy and security.<br />
+                                                                        <p>References:<br />
+									   Data Protection & Privacy 2023 - Data Protection & Privacy 2023 - Mauritius | Global Practice Guides | Chambers and Partners. Available at: https://practiceguides.chambers.com/practice-guides/data-protection-privacy-2023/mauritius/trends-and-developments (Accessed: 11 July 2023).<br />
+									   Voigt, P. and Von Dem Bussche, A. (2017). Scope of Application of the GDPR. In: , 9–30. Available from https://link-springer-com.uniessexlib.idm.oclc.org/chapter/10.1007/978-3-319-57959-7_2.<br />
+									   Tremont, D. (2020). The New Germany Privacy Act: BDSG or Bundesdatenschutzgesetz. [online] iltanet.org. Available at: https://www.iltanet.org/blogs/david-tremont/2020/02/06/bdsg-or (Accessed 11 July 2023).<br />
+									   ICO. (nd) ‘A guide to the data protection exemptions’. ICO. Available at: https://ico.org.uk/for-organisations/uk-gdpr-guidance-and-resources/exemptions/a-guide-to-the-data-protection-exemptions/ (Accessed: 11 July 2023). <br />
+								        </p>  
 								</div>
 							</section>
 
