--- a/generic_DBD_1.html
+++ b/generic_DBD_1.html
@@ -71,7 +71,9 @@
 									   &nbsp;&nbsp;&nbsp;Voigt, P. and Von Dem Bussche, A. (2017). Scope of Application of the GDPR. In: , 9–30. Available from https://link-springer-com.uniessexlib.idm.oclc.org/chapter/10.1007/978-3-319-57959-7_2.<br />
 									   &nbsp;&nbsp;&nbsp;Tremont, D. (2020). The New Germany Privacy Act: BDSG or Bundesdatenschutzgesetz. [online] iltanet.org. Available at: https://www.iltanet.org/blogs/david-tremont/2020/02/06/bdsg-or (Accessed 11 July 2023).<br />
 									   &nbsp;&nbsp;&nbsp;ICO. (nd) ‘A guide to the data protection exemptions’. ICO. Available at: https://ico.org.uk/for-organisations/uk-gdpr-guidance-and-resources/exemptions/a-guide-to-the-data-protection-exemptions/ (Accessed: 11 July 2023). <br />
-								        </p>  
+								        </p>
+									<p>In conclusion, these collaborative discussions enabled me to better understand effective data wrangling, which involves addressing challenges, managing security risks, and exploiting opportunities, is pivotal to maximizing the benefits of big data. Utilizing appropriate methodologies and tools for data preparation, cleaning, exploration, optimization, and evaluation is essential. Finally, awareness of compliance laws of crucial importance for a country to meet its regulatory obligations. Mastery in these areas enables efficient data management and insightful decision-making, becoming increasingly significant in our data-driven era.
+									</p>	
 								</div>
 							</section>
 
