--- a/Module 4.html
+++ b/Module 4.html
@@ -114,17 +114,17 @@ A new Landing page has to be created for each option
 									</div>
 								</section>
 								<section>
-									<a href="generic_DBD_1.html" class="image">
+									<a href="generic_DBD_2.html" class="image">
 										<img src="images/pic09.jpg" alt="" data-position="top center" />
 									</a>
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Reflections</h3>
+												<h3>Artefacts</h3>
 											</header>
-											<p>What exactly have I learnt and how?</p>
+											<p>Learning outomes from Team Exercises and Activities</p>
 											<ul class="actions">
-												<li><a href="generic.html" class="button">More Information here</a></li>
+												<li><a href="generic_DBD_2.html" class="button">More Information here</a></li>
 											</ul>
 										</div>
 									</div>
