--- a/Module 4.html
+++ b/Module 4.html
@@ -87,7 +87,7 @@ A new Landing page has to be created for each option
 							<section id="two" class="spotlights">
 								<section>
 									<a href="generic_DBD_1.html" class="image">
-										<img src="images/collaborative_discussion.gif" alt="" data-position="center center" />
+										<img src="images/collaborative_discussion.jpg" alt="" data-position="center center" />
 									</a>
 									<div class="content">
 										<div class="inner">
