--- a/Module 4.html
+++ b/Module 4.html
@@ -115,7 +115,7 @@ A new Landing page has to be created for each option
 								</section>
 								<section>
 									<a href="generic_DBD_2.html" class="image">
-										<img src="images/pic09.jpg" alt="" data-position="top center" />
+										<img src="images/collaborative_discussion.jpg" alt="" data-position="top center" />
 									</a>
 									<div class="content">
 										<div class="inner">
