--- a/generic_DBD_2.html
+++ b/generic_DBD_2.html
@@ -53,8 +53,8 @@
 										<h3>Outcomes from the Team Exercises and activites</h3>
 									</header>
 									<h2>Web Scraping</h2>
-									<p>The procedure of gathering data from the web is called web scraping. To put it another way, it's a programme that retrieves information from websites (often HTML pages) and parses it to find particular information.</b>
-									   Web scraping is used to gather data for market research, real estate analysis, corporate intelligence, and other purposes.</b>
+									<p>The procedure of gathering data from the web is called web scraping. To put it another way, it's a programme that retrieves information from websites (often HTML pages) and parses it to find particular information.
+									   Web scraping is used to gather data for market research, real estate analysis, corporate intelligence, and other purposes.
 									   The tool learned through this module is called beautifulsoup, is excellent at parsing collected HTML data.
 									</p>
 									<p></p>
