--- a/generic_DBD_2.html
+++ b/generic_DBD_2.html
@@ -52,18 +52,20 @@
 										<h1>Artefacts</h1>
 										<h3>Outcomes from the Team Exercises and activites</h3>
 									</header>
+									
 									<h2>Web Scraping</h2>
 									<p>The procedure of gathering data from the web is called web scraping. To put it another way, it's a programme that retrieves information from websites (often HTML pages) and parses it to find particular information.
 									   Web scraping is used to gather data for market research, real estate analysis, corporate intelligence, and other purposes.
 									   The tool learned through this module is called beautifulsoup, is excellent at parsing collected HTML data.
 									</p>
+									<h3 style="color: #CFA7F6;">Activity:</h3>
+									<img src="images/web_scraping1.jpg" alt="Example Image">
+									<img src="images/web_scraping2.jpg" alt="Example Image">
 									
 									<h3 style="color: #CFA7F6;">Practical Use:</h3>
 									<p>As a person working in the hospitality industry, a very typical application of web scraping in this sector is to fetch data from portals for booking and rating holiday offers that are normally not accessible via APIs, such as the TripAdvisor portal mentioned above. These typically include product descriptions and pricing data provided by the portal operators as well as user-generated content, such as reviews. As a result, the data can be used to compare and analyse the quality of various vacation packages as well as, of course, track pricing, which, in turn, allow general trends in the industry to be observed and compared across different regions.</p> 
 									<p>Searching for and extracting the needed text passages using text analysis functions, such as regular expressions, is usually a complex and time-consuming task that is also prone to errors. Therefore, specialized packages including “BeautifulSoup” is a good solution. </p>
 									Then, the data must undergo several pre-processing steps to be used and analysed by means of a suitable method, for example, regression or classification for predictions.</p>
-									<img src="images/web_scraping1.jpg" alt="Example Image">
-									<img src="images/web_scraping2.jpg" alt="Example Image">
 									<p></p>
 									<p></p>
 
