--- a/generic_DBD_2.html
+++ b/generic_DBD_2.html
@@ -59,6 +59,8 @@
 									   The tool learned through this module is called beautifulsoup, is excellent at parsing collected HTML data.
 									</p>
 									<h3 style="color: #CFA7F6;">Activity:</h3>
+
+									<p>Instructions:Write a web scraping script in Python using the key word 'Data Scientist' and parse this data into either an XML or JSON file. Perform the web scraping with the beautifulsoup4 and Request program modules.</p>
 									<img src="images/web_scraping1.png" alt="" />
 									<img src="images/web_scraping2.png" alt="" />
 									
