--- a/generic_DBD_2.html
+++ b/generic_DBD_2.html
@@ -53,7 +53,7 @@
 										<h3>Outcomes from the Team Exercises and activites</h3>
 									</header>
 									
-									  <h2>1. Web Scraping</h2>
+									  <h2> &#10020; Web Scraping</h2>
 									      <p>The procedure of gathering data from the web is called web scraping. To put it another way, it's a programme that retrieves information from websites (often HTML pages) and parses it to find particular information.
 									         Web scraping is used to gather data for market research, real estate analysis, corporate intelligence, and other purposes.
 									         The tool learned through this module is called beautifulsoup, is excellent at parsing collected HTML data.
@@ -87,11 +87,11 @@
 									              <p></p>
 									              <p></p>
 
-									  <h2>2. Data cleaning</h2>
+									  <h2> &#10020; Data cleaning</h2>
 									
-									  <h2>3. Data cleaning and automating Data Collection</h2>
+									  <h2> &#10020; Data cleaning and automating Data Collection</h2>
 
-									  <h2>4. API Security requirements</h2>
+									  <h2> &#10020; API Security requirements</h2>
 
 									<p></p><a href="digitalportfolioevaluationform.pdf">PDF for test</a><p>
 									<a href="https://github.com/nolaniyi/sample-portfolio"> A GitHub repository/site</a>
