--- a/generic_DBD_2.html
+++ b/generic_DBD_2.html
@@ -79,6 +79,7 @@
 									              <img src="images/web_scraping1.png" alt="" />
 									              <img src="images/web_scraping2.png" alt="" />
 									              <p>The code allows for the scraping of book titles from the Goodreads search results, store them in JSON and XML files.</p>
+									              <p>Note that it is crucial to check and understand the website's terms of service to ensure compliance with scraping activities. Otherwise , it is recommended to use websites and APIs that provide structured data. </p>
 									
 									       <h3 style="color: #CFA7F6;">Practical Use:</h3>
 									              <p>As a person working in the hospitality industry, a very typical application of web scraping in this sector is to fetch data from portals for booking and rating holiday offers that are normally not accessible via APIs, such as the TripAdvisor portal mentioned above. These typically include product descriptions and pricing data provided by the portal operators as well as user-generated content, such as reviews. As a result, the data can be used to compare and analyse the quality of various vacation packages as well as, of course, track pricing, which, in turn, allow general trends in the industry to be observed and compared across different regions.</p> 
