--- a/generic_DBD_2.html
+++ b/generic_DBD_2.html
@@ -88,7 +88,7 @@
 									              <p></p>
 									              <p></p>
 
-									  <h2> &#10021; Data cleaning</h2>
+									  <h2> &#10021; Data cleaning and Transformation </h2>
 									
 									  <h2> &#10021; Data cleaning and automating Data Collection</h2>
 
