--- a/generic_DBD_2.html
+++ b/generic_DBD_2.html
@@ -53,7 +53,9 @@
 										<h3>Outcomes from the Team Exercises and activites</h3>
 									</header>
 
-                                                                       <head>
+                                                                 
+
+<head>
     <title>Subtitles and Navigation</title>
     <style>
         h2 {
@@ -63,34 +65,32 @@
         }
 
         p {
-            display: none;
-        }
-
-        .active {
-            display: block;
+            margin-top: 20px;
         }
     </style>
-    <script>
-        function toggleContent(id) {
-            var content = document.getElementById(id);
-            if (content.style.display === "none") {
-                content.style.display = "block";
-            } else {
-                content.style.display = "none";
-            }
-        }
-    </script>
 </head>
 <body>
-    <h2 onclick="toggleContent('dataCleaning')">Data cleaning</h2>
-    <p id="dataCleaning" style="display: none;">This is the data cleaning part.</p>
+    <h2 onclick="scrollToSection('dataCleaning')">Data cleaning</h2>
 
-    <h2 onclick="toggleContent('dataCleaningAndAutomating')">Data cleaning and automating Data Collection</h2>
-    <p id="dataCleaningAndAutomating" style="display: none;">This is the data cleaning and automating Data Collection part.</p>
+    <h2 onclick="scrollToSection('dataCleaningAndAutomating')">Data cleaning and automating Data Collection</h2>
 
-    <h2 onclick="toggleContent('apiSecurityRequirements')">API Security requirements</h2>
-    <p id="apiSecurityRequirements" style="display: none;">This is the API Security requirements part.</p>
-</body>  
+    <h2 onclick="scrollToSection('apiSecurityRequirements')">API Security requirements</h2>
+
+    <p id="dataCleaning">This is the Data cleaning text.</p>
+
+    <p id="dataCleaningAndAutomating">This is the Data cleaning and automating Data Collection text.</p>
+
+    <p id="apiSecurityRequirements">This is the API Security requirements text.</p>
+
+    <script>
+        function scrollToSection(sectionId) {
+            var section = document.getElementById(sectionId);
+            section.scrollIntoView({ behavior: 'smooth' });
+        }
+    </script>
+</body>
+
+
 
 
 									
