--- a/Module 4.html
+++ b/Module 4.html
@@ -130,12 +130,12 @@ A new Landing page has to be created for each option
 												<li><a href="generic_DBD_2.html" class="button">More Information here</a></li>
 											</ul>
 											
-											<h3>Unit 4 - Data Cleaning and Transformation/h3>
+											<h3>Unit 4 - Data Cleaning and Transformation</h3>
 		                                                        		<ul class="actions">
 												<li><a href="generic_DBD_3.html" class="button">More Information here</a></li>
 											</ul>
 												
-		                                                      		        <h3>Unit 5 - Data Cleaning and Automation/h3>
+		                                                      		        <h3>Unit 5 - Data Cleaning and Automation</h3>
 		                                                        		<ul class="actions">
 												<li><a href="generic_DBD_4.html" class="button">More Information here</a></li>
 											</ul>	
