--- a/generic_DBD_3.html
+++ b/generic_DBD_3.html
@@ -53,10 +53,10 @@
 										<h3>Outcomes from the Team Exercises and activites</h3>
 									</header>
 
-									  <h2> Data cleaning and Transformation </h2>
+									   <h2> &#10021; Data cleaning and Transformation </h2>
    									   <p>Data cleaning, also called data cleansing or scrubbing, aims at detecting and removing errors and inconsistencies from data to improve the quality of data. <span class="reference">(Rahm et al, 2000)</span>. Data quality issues can occur in a variety of application situations and need to be handled properly to ensure the accuracy of the information. Missing numbers, duplicates, misspelt words, inconsistent data, and incorrect data formats are a few examples of data anomalies. <span class="reference">(Galhardas, 2006)</span>.</p>
 
-    									  <h3>&#10021;Examples of causes of errors and inconsistencies:</h3>
+    									  <h3 style="color: #CFA7F6;">Examples of causes of errors and inconsistencies:</h3>
    									   <ul>
  									          <li>Data from various sources may have been created at different times, by different people using various conventions to translate real-world entities into data. For instance, the same customer may be addressed by slightly different but accurate names at various tables, such as "Paul Brown," "Brown Paul," or "P. Brown." In the case of a single source, this issue is known as the object or instance identification problem, duplicate elimination, or record linkage problem.</li>
 									          <li>Missing values is also made possible by the fact that amalgamated data is created and utilised by several entities. For example, knowing a client's age is crucial for the marketing department but completely insignificant for the accounting one.</li>
@@ -65,7 +65,7 @@
  									          <li>There may be discrepancies in data, such as two records for the same person having two different birth dates.</li>
    									   </ul>
 
-    									  <h3>&#10021;Application of Data Cleaning:</h3>
+    									  <h3 style="color: #CFA7F6;">Application of Data Cleaning:</h3>
     									      <ol>
       									        <li>In the book "Data Wrangling with Python by Kazil, J & Jarmul, K", the authors investigated methods for standardising data formats to address inconsistent formatting. They look at Python packages like pandas, which offer functions for data transformations, formatting, and parsing. Analysts can guarantee consistency and comparability across the dataset by using these strategies.</li>
        									        <li>Also, the authors discuss on the handling of missing values which is an important component of data cleaning and the strategies for handling missing data in datasets using several techniques like data imputation, dropping missing values, and leveraging libraries like pandas and NumPy to handle missing data effectively.</li>
