--- a/Module 4.html
+++ b/Module 4.html
@@ -140,7 +140,7 @@ A new Landing page has to be created for each option
 												<li><a href="generic_DBD_4.html" class="button">More Information here</a></li>
 											</ul>	
 
-	                                                         			<h3>Unit 7 - NConstructing Normalised Tables and Database Build</h3>
+	                                                         			<h3>Unit 7 - Constructing Normalised Tables and Database Build</h3>
 		                                                        		<ul class="actions">
 												<li><a href="generic_DBD_5.html" class="button">More Information here</a></li>
 											</ul>
