--- a/Module 4.html
+++ b/Module 4.html
@@ -115,8 +115,8 @@ A new Landing page has to be created for each option
 								</section>
 								<section>
 									<a href="generic_DBD_2.html" class="image">
-										
-										<img src="images/\artefacts.jpg" alt="" data-position="large-image" />
+									
+										<img src="images/\artefacts.jpg" style="width: 900px; height: 1000px;" />
 									</a>
 									<div class="content">
 										<div class="inner">
