--- a/Module 4.html
+++ b/Module 4.html
@@ -116,7 +116,7 @@ A new Landing page has to be created for each option
 								<section>
 									<a href="generic_DBD_2.html" class="image">
 									
-										<img src="images/\artefacts.jpg" style="width: 1500px; height: 1000px;" />
+										<img src="images/\artefacts.jpg" style="width: 1500px; height: 1000px;" alt="" data-position="center center" />
 									</a>
 									<div class="content">
 										<div class="inner">
