--- a/Module 4.html
+++ b/Module 4.html
@@ -115,7 +115,12 @@ A new Landing page has to be created for each option
 								</section>
 								<section>
 									<a href="generic_DBD_2.html" class="image">
-									
+									<style>
+  .left-aligned {
+    float: left;
+    margin-right: 10px; /* Adjust the margin as needed */
+  }
+</style>
 										<img src="images/\artefacts.jpg" style="width: 1500px; height: 1000px;" alt="" data-position="top left" />
 									</a>
 									<div class="content">
