--- a/generic_DBD_5.html
+++ b/generic_DBD_5.html
@@ -148,7 +148,7 @@
 								                        <img src="images/DBD_Normalisation_T2.png" alt="" />
 							                        </span>
 					
-								                        <img src="images/DBD_Normalisation_T3.png" alt="" data-position="center center"/>
+								                        <img src="images/DBD_Normalisation_T3.png" alt="" data-position="center"/>
 							                        </span>
 
 
