--- a/generic_DBD_5.html
+++ b/generic_DBD_5.html
@@ -140,7 +140,8 @@
 							                        </span>	
 
 									    <p>Columns that are not reliant on the primary key have been eliminated. 'Course Name' serves as the primary key in the table 'course_details'. The data is in Third Normal Form (3NF).</p>
-							  		    <p> The final normalized tables in 3NF are shown below:
+							  		    <p> The final normalized tables in 3NF are shown below: </p>
+									
 								                        <img src="images/DBD_Normalisation_T1.png" alt="" />
 							                        </span>
 							
