--- a/generic_DBD_5.html
+++ b/generic_DBD_5.html
@@ -59,7 +59,7 @@
  									           <li>Reflection piece</li>
 									        </ul>
 									
-								          <h2> &#10021; Normalization</h2>
+								          <h2> &#10021; Data Normalization</h2>
 
 									
 										  <p>Data analysis is a process that prepares a data model for implementation. The specific technique is called normalization.</p>
