--- a/Module 4.html
+++ b/Module 4.html
@@ -165,9 +165,8 @@ A new Landing page has to be created for each option
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Meeting Notes</h3>
+												<h2>valuation of the final project (Unit 11) vs. the initial proposal (Unit 6). </h2>
 											</header>
-											<p>Notes from various meetings, as well as feedback from team members and tutors.</p>
 											<ul class="actions">
 												<li><a href="generic.html" class="button">For details, see here</a></li>
 											</ul>
@@ -179,9 +178,15 @@ A new Landing page has to be created for each option
 							<section id="three">
 								<div class="inner">
 									<header class="major">
-										<h2>Professional Skills Matrix and Action Plan</h2>
+										<h2>Relective Piece</h2>
 									</header>
-									<p>What skills have I gained or enhaced as a result of this module and how can I use it?  What else do I need to learn?</p>
+									<p>
+										 <li>Your knowledge of the different data extraction, exploration, cleaning and modelling techniques you have covered in this module. </li>
+										 <li>Your individual contributions to the team activities. </li>
+										 <li>Your experience as a member of a development team. </li>
+										 <li>The impact on your professional/personal development. </li>
+									</p>
+									
 									<ul class="actions">
 										<li><a href="generic.html" class="button next">Learn More</a></li>
 									</ul>
