--- a/Module 4.html
+++ b/Module 4.html
@@ -165,7 +165,7 @@ A new Landing page has to be created for each option
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h2>valuation of the final project (Unit 11) vs. the initial proposal (Unit 6). </h2>
+												<h2>Evaluation of the final project (Unit 11) vs. the initial proposal (Unit 6). </h2>
 											</header>
 											<ul class="actions">
 												<li><a href="generic.html" class="button">For details, see here</a></li>
