--- a/generic_DBD_8.html
+++ b/generic_DBD_8.html
@@ -8,7 +8,7 @@
 -->
 <html>
 	<head>
-		<title>Jane Doe</title>
+		<title>Tasweem Beelunkhan</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="css/main.css" />
@@ -21,7 +21,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo"><span>Jane Doe</span></a>
+						<a href="index.html" class="logo"><span>Tasweem Beelunkhan</span></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -30,13 +30,13 @@
 				<!-- Menu -->
 					<nav id="menu">
 						<ul class="links">
-							<<li><a href="index.html">Home</a></li>
+							<li><a href="index.html">Home</a></li>
 							<li><a href="About.html">About Me</a></li>
-							<li><a href="Launch Module.html">Launch Module</a></li>
-							<li><a href="Module 2.html">Secure Software Development</a></li>
-							<li><a href="Module 3.html">Object-Oriented Information Systems</a></li>
-							<li><a href="Module 4.html">Network and Information Security Management</a></li>
-							<li><a href="Module 5.html">Software Engineering PM</a></li>
+							<li><a href="Launch Module.html">The Data Professional</a></li>
+							<li><a href="Module 2.html">Numerical Analysis</a></li>
+							<li><a href="Module 4.html">Deciphering Big Data</a></li>
+							<li><a href="Module 3.html">Visualising Data</a></li>
+							<li><a href="Module 5.html">Machine Learning PM</a></li>
 							<li><a href="Module 6.html">Research Methods and Professional Practice</a></li>
 							<li><a href="Project.html">Project</a></li>
 						</ul>
@@ -49,9 +49,9 @@
 							<section id="one">
 								<div class="inner">
 									<header class="major">
-										<h1>Generic title</h1>
+										<h1>Reflective Piece</h1>
 									</header>
-									<span class="image main"><img src="images/pic11.jpg" alt="" /></span>
+
 									<p>Just a place for more information from the various key pages</p>
 									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
 									<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
