--- a/generic_DBD_1.html
+++ b/generic_DBD_1.html
@@ -36,7 +36,7 @@
 							<li><a href="Module 2.html">Numerical Analysis</a></li>
 							<li><a href="Module 4.html">Deciphering Big Data</a></li>
 							<li><a href="Module 3.html">Visualising Data</a></li>
-							<li><a href="Module 5.html">Machine Learning PM</a></li>
+							<li><a href="Module 5.html">Machine Learning</a></li>
 							<li><a href="Module 6.html">Research Methods and Professional Practice</a></li>
 							<li><a href="Project.html">Project</a></li>
 						</ul>
