--- a/Module 4.html
+++ b/Module 4.html
@@ -97,8 +97,8 @@ A new Landing page has to be created for each option
 											<div>
                                                                                             <h3>The module comprises of 2 Collaborative Discussions:</h3>
                                                                                             <ul>
-                                                                                                <li>Collaborative Discussion 1 - The Data Collection Process</li>
-                                                                                                <li>Collaborative Discussion 2 - Comparing Compliance Laws</li>
+                                                                                                <li>Unit 1-3 - Collaborative Discussion 1 - The Data Collection Process</li>
+                                                                                                <li>Unit 8-10 - Collaborative Discussion 2 - Comparing Compliance Laws</li>
                                                                                             </ul>
                                                                                             <h3>Both have 2 main learning outcomes:</h3>
                                                                                             <ul>
