--- a/Module 4.html
+++ b/Module 4.html
@@ -126,7 +126,33 @@ A new Landing page has to be created for each option
 											</header>
 											<p>Learning outomes from Team Exercises and Activities</p>
 
-
+  <style>
+    /* Add your custom CSS styles here */
+    body {
+      font-family: Arial, sans-serif;
+      line-height: 1.6;
+      margin: 0;
+      padding: 0;
+    }
+    .container {
+      max-width: 900px;
+      margin: 0 auto;
+      padding: 20px;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      align-items: center;
+    }
+    .unit {
+      width: 45%;
+      padding: 10px;
+    }
+    .bottom-middle {
+      text-align: center;
+      width: 100%;
+      padding: 10px;
+    }
+  </style>
     <div class="container">
       <div class="unit">
         <h4>Unit 3 - Web Scraping</h4>
