--- a/Module 4.html
+++ b/Module 4.html
@@ -141,7 +141,7 @@ A new Landing page has to be created for each option
       display: flex;
       flex-wrap: wrap;
       justify-content: space-between;
-      align-items: center;
+      align-items: left;
     }
     .unit {
       width: 45%;
