--- a/generic_DBD_3.html
+++ b/generic_DBD_3.html
@@ -50,7 +50,7 @@
 								<div class="inner">
 									<header class="major">
 										<h1>&#10021; Data cleaning and Transformation</h1>
-
+										<h3>Outcomes from the Team Exercises and activites</h3>
 									</header>
 
    									   <p>Data cleaning, also called data cleansing or scrubbing, aims at detecting and removing errors and inconsistencies from data to improve the quality of data. <span class="reference">(Rahm et al, 2000)</span>. Data quality issues can occur in a variety of application situations and need to be handled properly to ensure the accuracy of the information. Missing numbers, duplicates, misspelt words, inconsistent data, and incorrect data formats are a few examples of data anomalies. <span class="reference">(Galhardas, 2006)</span>.</p>
