--- a/Module 4.html
+++ b/Module 4.html
@@ -125,7 +125,6 @@ A new Landing page has to be created for each option
 												<h3>Artefacts</h3>
 											</header>
 											<p>Learning outomes from Team Exercises and Activities</p>
-
   <style>
     /* Add your custom CSS styles here */
     body {
@@ -141,7 +140,7 @@ A new Landing page has to be created for each option
       display: flex;
       flex-wrap: wrap;
       justify-content: space-between;
-      align-items: left;
+      align-items: center;
     }
     .unit {
       width: 45%;
@@ -153,6 +152,9 @@ A new Landing page has to be created for each option
       padding: 10px;
     }
   </style>
+</head>
+<body>
+  <section>
     <div class="container">
       <div class="unit">
         <h4>Unit 3 - Web Scraping</h4>
