--- a/Module 4.html
+++ b/Module 4.html
@@ -117,14 +117,8 @@ A new Landing page has to be created for each option
 
 								
 								<section>
-
-									<div class="content">
-										<div class="inner">
-											<header class="major">
-												
-												<h3>Artefacts</h3>
-											</header>
-											<p>Learning outomes from Team Exercises and Activities</p>
+<head>
+  <title>Artefacts</title>
   <style>
     /* Add your custom CSS styles here */
     body {
@@ -188,6 +182,7 @@ A new Landing page has to be created for each option
       </div>
     </div>
   </section>
+</body>
 								<section>
 									<a href="generic.html" class="image">
 										<img src="images/pic10.jpg" alt="" data-position="25% 25%" />
