--- a/Module 4.html
+++ b/Module 4.html
@@ -162,6 +162,7 @@ A new Landing page has to be created for each option
 										<div class="inner">
 											<header class="major">
 												<h2>Evaluation of the final project (Unit 11) vs. the initial proposal (Unit 6). </h2>
+												<p>Team Minutes</p>
 											</header>
 											<ul class="actions">
 												<li><a href="generic_DBD_7.html" class="button">For details, see here</a></li>
